--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@apollo/client": "^3.0.2",
     "apollo-server-micro": "^2.14.2",
     "graphql": "^14.0.2",
+    "nanoid": "^3.2.0",
+    "nedb": "^1.8.0",
     "next": "latest",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
