--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.0.2",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/material": "^5.4.1",
     "apollo-server-micro": "^2.14.2",
     "graphql": "^14.0.2",
     "nanoid": "^3.2.0",
